<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.login.kakaosignup.KakaoAddInfo">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_kakao_signup_left_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="17dp">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_kakao_signup_right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="17dp">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_kakaosignup_backbtn"
        android:layout_width="22dp"
        android:layout_height="19dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/back_btn"
        >
    </androidx.appcompat.widget.AppCompatImageView>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:text="@string/kakao_signup_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp">
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/login_kakao_signup_right_guide"
        android:layout_marginTop="59dp"
        android:text="인테리어 전문가이시다면  "
        android:textSize="12sp"
        android:textStyle="bold"
        android:drawableEnd="@drawable/braket1">
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_kakao_signup_email"
        android:layout_width="0dp"
        android:layout_height="47dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_kakao_signup_left_guide"
        app:layout_constraintEnd_toStartOf="@id/login_kakao_signup_right_guide"
        android:layout_marginTop="90dp"
        android:background="@drawable/login_kakao_email_border"
        android:text="@string/kakao_signup_email"
        android:gravity="top"
        android:paddingStart="14dp"
        android:paddingTop="15dp"
        android:textSize="13sp"
        android:textColor="#656565"
        >
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_kakao_signup_nickname"
        android:layout_width="0dp"
        android:layout_height="47dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_kakao_signup_left_guide"
        app:layout_constraintEnd_toStartOf="@id/login_kakao_signup_right_guide"
        android:layout_marginTop="160dp"
        android:background="@drawable/login_email_login_border"
        android:hint="@string/kakao_signup_nickname"
        android:gravity="top"
        android:paddingStart="14dp"
        android:paddingTop="15dp"
        android:textSize="13sp"
        android:textCursorDrawable="@drawable/login_cursor_drawable">
    </androidx.appcompat.widget.AppCompatEditText>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_kakao_signup_nickname_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/login_kakao_signup_left_guide"
        app:layout_constraintBottom_toBottomOf="@id/login_kakao_signup_nickname"
        app:layout_constraintTop_toTopOf="@id/login_kakao_signup_nickname"
        android:layout_marginTop="42dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/kakao_signup_nickname_length_limit"
        android:textColor="#FF5962"
        android:textSize="11sp"
        android:layout_marginEnd="10dp">
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_recommend_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_kakao_signup_nickname_warning"
        app:layout_constraintStart_toStartOf="@id/login_kakao_signup_left_guide"
        android:text="@string/kakao_signup_isrecommended"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginTop="32dp">
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/kakao_recommend_code"
        android:layout_width="0dp"
        android:layout_height="46dp"
        app:layout_constraintTop_toBottomOf="@id/login_recommend_tv"
        app:layout_constraintStart_toEndOf="@id/login_kakao_signup_left_guide"
        app:layout_constraintEnd_toStartOf="@id/login_kakao_signup_right_guide"
        android:layout_marginTop="11dp"
        android:background="@drawable/login_email_login_border"
        android:hint="@string/kakao_signup_recommend_code"
        android:gravity="top|bottom"
        android:paddingStart="14dp"
        android:textSize="13sp"
        android:textCursorDrawable="@drawable/login_cursor_drawable">
    </androidx.appcompat.widget.AppCompatEditText>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="38dp"
        android:layout_height="31dp"
        app:layout_constraintTop_toTopOf="@id/kakao_recommend_code"
        app:layout_constraintEnd_toEndOf="@id/kakao_recommend_code"
        app:layout_constraintBottom_toBottomOf="@id/kakao_recommend_code"
        android:layout_marginEnd="13dp"
        android:text="@string/kakao_signup_confirm"
        android:gravity="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="@drawable/login_border_signupfinish_off"
        >
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/kakao_signup_complete"
        android:layout_width="0dp"
        android:layout_height="49dp"
        app:layout_constraintTop_toBottomOf="@id/kakao_recommend_code"
        app:layout_constraintStart_toEndOf="@id/login_kakao_signup_left_guide"
        app:layout_constraintEnd_toStartOf="@id/login_kakao_signup_right_guide"
        android:layout_marginTop="29dp"
        android:background="@drawable/login_border_signupfinish_off"
        android:text="@string/kakao_signup_complete"
        android:gravity="center"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:clickable="true"
        >
    </androidx.appcompat.widget.AppCompatTextView>

</androidx.constraintlayout.widget.ConstraintLayout>