<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".src.login.LoginActivity">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="110.5dp"
        android:layout_marginEnd="120dp"
        android:text="@string/login_intro1"
        android:textSize="21sp"
        android:textColor="@color/black"
        >
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_t1"
        android:layout_marginTop="110.5dp"
        android:layout_marginStart="8dp"
        android:text="@string/login_intro2"
        android:textSize="21sp"
        android:textColor="@color/black"
        android:textStyle="bold">
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="144dp"
        android:text="@string/login_intro3"
        android:textSize="21sp"
        android:textColor="@color/black">
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_ballon"
        android:layout_width="194dp"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_kakao"
        android:layout_marginBottom="6dp"
        android:background="@drawable/login_ballon_1"
        ></androidx.appcompat.widget.AppCompatImageView>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/login_ballon"
        app:layout_constraintBottom_toBottomOf="@id/login_ballon"
        app:layout_constraintStart_toStartOf="@id/login_ballon"
        android:layout_marginBottom="7dp"
        android:layout_marginStart="23dp"
        android:background="@drawable/login_thunder_icon">

    </androidx.appcompat.widget.AppCompatImageView>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/login_ballon"
        app:layout_constraintBottom_toBottomOf="@id/login_ballon"
        app:layout_constraintEnd_toEndOf="@id/login_ballon"
        android:text="@string/login_ballon"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:textSize="13.7sp"
        android:textColor="@color/black"
        android:textStyle="bold">
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_kakao"
        android:layout_width="320dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="269dp"
        android:background="@drawable/login_kakao"
        ></androidx.appcompat.widget.AppCompatImageView>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="25dp"
        android:layout_height="23dp"
        app:layout_constraintTop_toTopOf="@id/login_kakao"
        app:layout_constraintStart_toStartOf="@id/login_kakao"
        app:layout_constraintBottom_toBottomOf="@id/login_kakao"
        android:layout_marginStart="77dp"
        app:srcCompat="@drawable/login_kakao_icon"
        >
    </androidx.appcompat.widget.AppCompatImageView>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/login_kakao"
        app:layout_constraintStart_toStartOf="@id/login_kakao"
        app:layout_constraintEnd_toEndOf="@id/login_kakao"
        app:layout_constraintBottom_toBottomOf="@id/login_kakao"
        android:text="@string/login_kakao"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="40dp"
        >
    </androidx.appcompat.widget.AppCompatTextView>
    <View
        android:layout_width="155dp"
        android:layout_height="0.4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="55dp"
        android:background="#B6B6B6"
        >
    </View>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_or"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        android:layout_marginBottom="55dp"
        android:text="@string/login_or">
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/login_linear_login"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/login_naver_icon">
        </androidx.appcompat.widget.AppCompatImageView>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/master_key"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/login_facebook_icon">
        </androidx.appcompat.widget.AppCompatImageView>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/login_apple_icon">
        </androidx.appcompat.widget.AppCompatImageView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_email_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_email_signin"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="270dp"
        android:textSize="13sp"
        android:background="@drawable/login_email_border">
    </androidx.appcompat.widget.AppCompatTextView>
    <View
        android:layout_width="1dp"
        android:layout_height="8dp"
        android:background="#D3D3D3"
        android:layout_gravity="center"
        app:layout_constraintStart_toEndOf="@id/login_email_signin"
        app:layout_constraintEnd_toStartOf="@id/login_email_signup"
        app:layout_constraintBottom_toBottomOf="@id/login_email_signin"
        app:layout_constraintTop_toTopOf="@id/login_email_signin"
        >
    </View>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_email_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="270dp"
        android:text="@string/login_email_signup"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:background="@drawable/login_email_border">
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:text="@string/login_non_member"
        android:textSize="13sp">
    </androidx.appcompat.widget.AppCompatTextView>

</androidx.constraintlayout.widget.ConstraintLayout>