<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.login.emailsignin.EmailSignin">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_email_signin_left_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="17dp">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_email_signin_right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="17dp">
    </androidx.constraintlayout.widget.Guideline>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_emailsignin_backbtn"
        android:layout_width="22dp"
        android:layout_height="19dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/back_btn"
        >
    </androidx.appcompat.widget.AppCompatImageView>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="13dp"
        android:text="@string/email_signin_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15sp">
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_email_signin_email"
        android:layout_width="0dp"
        android:layout_height="47dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_email_signin_left_guide"
        app:layout_constraintEnd_toStartOf="@id/login_email_signin_right_guide"
        android:layout_marginTop="70dp"
        android:background="@drawable/login_email_login_border"
        android:hint="@string/email_signin_email"
        android:textSize="13sp"
        android:textColor="#000000"
        android:paddingStart="14dp"
        android:textCursorDrawable="@drawable/login_cursor_drawable"
        >
    </androidx.appcompat.widget.AppCompatEditText>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_email_signin_password"
        android:layout_width="0dp"
        android:layout_height="47dp"
        app:layout_constraintTop_toBottomOf="@id/login_email_signin_email"
        app:layout_constraintStart_toEndOf="@id/login_email_signin_left_guide"
        app:layout_constraintEnd_toStartOf="@id/login_email_signin_right_guide"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_email_login_border"
        android:hint="@string/email_signin_password"
        android:textSize="13sp"
        android:textColor="#000000"
        android:paddingStart="14dp"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/login_cursor_drawable">
    </androidx.appcompat.widget.AppCompatEditText>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_email_signin_login_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/login_email_signin_password"
        app:layout_constraintStart_toEndOf="@id/login_email_signin_left_guide"
        app:layout_constraintEnd_toStartOf="@id/login_email_signin_right_guide"
        android:layout_marginTop="26dp"
        android:background="@drawable/login_email_round"
        >
    </androidx.appcompat.widget.AppCompatImageView>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/login_email_signin_login_btn"
        app:layout_constraintStart_toStartOf="@id/login_email_signin_login_btn"
        app:layout_constraintEnd_toEndOf="@id/login_email_signin_login_btn"
        app:layout_constraintBottom_toBottomOf="@id/login_email_signin_login_btn"
        android:text="@string/email_signin_login"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="14sp">
    </androidx.appcompat.widget.AppCompatTextView>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_email_signin_login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/email_signin_reset"
        android:textColor="#636363"
        android:textSize="11sp">
    </androidx.appcompat.widget.AppCompatTextView>
</androidx.constraintlayout.widget.ConstraintLayout>